@@ -1,5 +1,6 @@
 14 May 2009
 
+* clear-history command to clear a pane's history.
 * Don't force wrapping with \n when asked, let the cursor code figure it out.
   Should fix terminals which use this to detect line breaks.
 * Major cleanup and restructuring of build infrastructure. Still separate files
@@ -1254,7 +1255,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.286 2009-05-14 16:21:54 nicm Exp $
+$Id: CHANGES,v 1.287 2009-05-14 16:56:23 nicm Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB ms
